--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="home-img">
-                            <img src="./img/hero-img.svg" class="img-fluid ms-5" alt="" width="420px">
+                            <img src="./img/hero-img.svg" class="img-fluid ms-5" alt="" width="100%" style="overflow: hidden;" >
                         </div>
                     </div>
                     <div class="col-lg-6 order-md-first" style=" color: #fff;">
